# jsonlang-llvm

./: .gitignore  CompIR0Translator.extra.test.ts  CompIR0Translator.ts  CompIR2.ts  CompIR2Translator.ts  CompIR3.ts  CompIR4Translator.ts  Makefile  README.md  exec_integration.test.ts  launcher.ts  main.ts
IR/: foo.c  foo.ll  generate.bat  print.bc  print.c  print.ll  replaced.ll  run.bat  template_linux.ll  template_win.ll
tests/llTesterWS/: CMakeLists.txt  CMakePresets.json  llTesterWS.cpp  llTesterWS.h
tests/llTesterWS/server/: credits.md  http.cpp
